--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -26,11 +26,6 @@
     </nav>
     <main>
       <h1>Navigation Treeview Example Using Computed Properties</h1>
-      <p>
-        Code is complete for this example.
-        Feedback and progress on editorial work on this page are being tracked in
-        <a href="https://github.com/w3c/aria-practices/issues/225">issue 225.</a>
-      </p>
   <p>
     The below example demonstrates how the
     <a href="../../../#TreeView">Treeview Design Pattern</a>
@@ -346,7 +341,7 @@
       <section>
         <h2>Terms Used to Describe Trees</h2>
         <p>
-          A tree item that can be expanded to reveal child items is called a parrent node.
+          A tree item that can be expanded to reveal child items is called a parent node.
           It is a closed node when the children are hidden and an open node when it is expanded.
           An end node does not have any children.
           For a complete list of terms and definitions, see the
