--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -36,6 +36,9 @@
     <li>
       <a href="disclosure-faq.html">Example Disclosure (Show/Hide) for Answers to Frequently Asked Questions</a>
     </li>
+    <li>
+      <a href="disclosure-navigation.html">Example Disclosure for Navigation Menus</a>
+    </li>
   </ul>
   <section>
     <h2 id="ex_label">Example</h2>
@@ -71,8 +74,8 @@
                 <th scope="col">Location</th>
                 <th scope="col">Approximate Date</th>
                 <th scope="col">Size of Army</th>
-                <th scope="col">Tempature C</th>
-                <th scope="col">Tempature F</th>
+                <th scope="col">Temperature C</th>
+                <th scope="col">Temperature F</th>
                 <th scope="col">Direction</th>
               </tr>
             </thead>
@@ -241,7 +244,7 @@
   <section>
     <h2>Accessibility Features</h2>
     <ol>
-    <li> The visual indication of expanded and collapsed states is synchronized with the value of <code>aria-expanded</code> using a CSS atribute selector and <code>:before</code> pseudo element that generates an image with the <code>content</code> property.</li>
+    <li> The visual indication of expanded and collapsed states is synchronized with the value of <code>aria-expanded</code> using a CSS attribute selector and <code>:before</code> pseudo element that generates an image with the <code>content</code> property.</li>
       <li>The interactivity of the disclosure button is visually indicated on focus and hover:
         <ul>
           <li>The CSS <code>:focus</code> pseudo class is used to change the background and border colors.</li>
