--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -31,10 +31,6 @@
   <main>
   <h1>Navigation Menubar Example</h1>
   <p>
-    <strong>NOTE:</strong> Please provide feedback on this example in
-    <a href="https://github.com/w3c/aria-practices/issues/410">issue 410.</a>
-  </p>
-  <p>
     The following implementation of the
     <a href="../../../#menu">design pattern for menubar</a>
     demonstrates a menubar that provides site navigation menus.
@@ -43,7 +39,9 @@
   <p>Similar examples include: </p>
   <ul>
     <li><a href="../menubar-2/menubar-2.html">Editor Menubar Example</a>: Example of a menubar that presents text styling actions similar to an editor application.</li>
+    <li><a href="../../disclosure/disclosure-navigation.html">Example Disclosure for Navigation Menus</a>: Navigation menus implemented as simple drop down lists of links that are shown and hidden using disclosure buttons.</li>
   </ul>
+  
   <section id="code-ex-1">
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
