--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -27,11 +27,6 @@
     </nav>
     <main>
       <h1>Navigation Treeview Example Using Declared Properties</h1>
-      <p>
-        <strong>NOTE:</strong>: This example is recently revised and ready for review.
-        Please provide feedback in
-        <a href="https://github.com/w3c/aria-practices/issues/405">issue 405.</a>
-      </p>
     <p>
     The below example demonstrates how the
     <a href="../../../#TreeView">Treeview Design Pattern</a>
@@ -478,7 +473,7 @@
       <section>
         <h2>Terms Used to Describe Trees</h2>
         <p>
-          A tree item that can be expanded to reveal child items is called a parrent node.
+          A tree item that can be expanded to reveal child items is called a parent node.
           It is a closed node when the children are hidden and an open node when it is expanded.
           An end node does not have any children.
           For a complete list of terms and definitions, see the
