Add change log to appendix

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6458,6 +6458,47 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
     <section id="change_log" class="appendix">
       <h3>Change History</h3>
       
+      <section id="change_log_2019_july" class="appendix">
+        <h4>Changes in July 2019 Publication of Note Release 4</h4>
+        <ul>
+          <li>Major additions and revisions:
+            <ul>
+              <li>
+                Added section providing guidance on coding and composing accessible names and descriptions.
+                This section comprehensively covers ARIA and HTML naming and describing techniques as well as specific guidance for every ARIA role.
+              </li>
+              <li>Added example of a site navigation bar (<q>menu system</q>) with dropdown lists of links coded using the disclosure pattern.</li>
+              <li>
+                Added an example of a date picker based on the dialog and grid patterns.
+                A modal dialog contains a calendar grid that presents buttons for each day of a month.
+              </li>
+              <li> Added an example of a date picker that uses three spin buttons for day, month, and year.</li>
+              <li>
+                Image Carousel Example: Updated the example so that the rotation control is always visible instead of only being visible for keyboard users who move focus into the carousel region.
+                Also changed the controls so they are implemented with HTML button elements instead of links with the <code>button</code> role.
+              </li>
+              <li>Toolbar Example: Added popup text labels for icons that are displayed on both hover and focus.</li>
+            </ul>
+          </li>
+          <li>Minor revisions of guidance or implementation were made to the following design patterns and examples:
+            <ul>
+              <li>Editor Menubar Example: Updated example so that meta data used by the scripts is specified using <code>data-</code> attributes instead of with <code>rel</code> attributes.</li>
+              <li>Radio Group with Active Descendant Example: Removed unused keycodes and fixed linting issues.</li>
+            </ul>
+          </li>
+        </ul>
+        <p>Also see:</p>
+        <ul>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/milestone/8">The APG 1.1 Release 4 Milestone</a>:
+            which lists the GitHub issues that document discussions and reviews of changes included in the July 2019 publication.
+          </li>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/wiki/Change-Log-for-July-2019-APG-1.1-Note-Release-4">Detailed change log with links to all commits that are new in the July 2019 publication  since the January 2019 publication.</a>
+          </li>
+        </ul>
+      </section>
+      
       <section id="change_log_2019_january" class="appendix">
         <h4>Changes in January 2019 Publication of Note Release 3</h4>
         <ul>
