--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6471,6 +6471,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
         <ul>
           <li>Jon Gunderson and Nicholas Hoyt  of the Division of Disability Resources and Education Services at the University of Illinois Urbana/Champaign and the students Max Foltz,  Sulaiman Sanaullah, Mark McCarthy, and Jinyuan Zhou for their contributions to the development of many of the design pattern examples.</li>
           <li>Valerie Young of Bocoup and her sponsor, Facebook, for development of the example test framework and regressions tests for more than 50 examples.</li>
+          <li>Simon Pieters of Bocoup and his sponsor, Facebook, for authoring of significant guidance sections, including comprehensive treatement of the topic of accessible names and descriptions.</li>
         </ul>
       </section>
     	<section>
@@ -6478,17 +6479,24 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
     		<ul>
     			<li>Ann Abbott (Invited Expert)</li>
     			<li>Shirisha Balusani (Microsoft Corporation)</li>
+          <li>Dorothy Bass (Wells Fargo Bank N.A.)</li>
     			<li>Curt Bellew (Oracle)</li>
-    			<li>Michiel Bijl (Invited Expert)</li>
+    			<li>Zoë Bijl (Invited Expert)</li>
     			<li>Michael Cooper (W3C)</li>
     			<li>Bryan Garaventa (Level Access)</li>
     			<li>Jon Gunderson (University of Illinois at Urbana-Champaign)</li>
+          <li>Jesse Hausler(Salesforce)</li>
+          <li>Sarah Higley (Microsoft Corporation)</li>
     			<li>Hans Hillen (The Paciello Group, LLC)</li>
     			<li>Matt King (Facebook)</li>
     			<li>Jaeun Ku (University of Illinois at Urbana-Champaign)</li>
     			<li>Aaron Leventhal (Google)</li>
+          <li>Carolyn MacLeod (IBM Corporation)</li>
     			<li>Mark McCarthy (University of Illinois at Urbana-Champaign)</li>
     			<li>James Nurthen (Adobe)</li>
+          <li>Scott O'Hara (The Paciello Group, LLC)</li>
+          <li>Simon Pieters (Bocoup)</li>
+          <li>Scott Vinkle (Shopify)</li>
     			<li>Evan Yamanishi (W. W. Norton)</li>
     			<li>Valerie Young (Bocoup)</li>
     		</ul>
@@ -6513,7 +6521,6 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
     			<li>Tatiana Iskandar</li>
     			<li>Patrick Lauke</li>
     			<li>Marek Lewandowski</li>
-    			<li>Carolyn MacLeod</li>
     			<li>Dan Matthew</li>
     			<li>Shane McCarron</li>
     			<li>Victor Meyer</li>
