--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -40,7 +40,7 @@
       <h1>Auto-Rotating Image Carousel Example</h1>
       <p>
         The following example implementation of the
-        <a href="../../../#carousel">carousel design pattern</a>
+        <a href="../../#carousel">carousel design pattern</a>
         demonstrates features of the pattern that are essential to accessibility for carousels that automatically start rotating when the page loads.
         For instance, rotation stops when users move focus to any control or link in the carousel or hover the mouse over carousel content.
         The accessibility features section that follows the example describes these features in detail.
@@ -533,7 +533,7 @@
     </main>
 
     <nav>
-      <a href="../../../#carousel">Carousel Pattern in WAI-ARIA Authoring Practices 1.1</a>
+      <a href="../../#carousel">Carousel Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
 
   </body>
