--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2419,10 +2419,7 @@
 
       <section class="notoc">
         <h4>Example</h4>
-        <p>
-          Work to develop a spinbutton example is tracked by
-          <a href="https://github.com/w3c/aria-practices/issues/125">issue 125.</a>
-        </p>
+        <p><a href="examples/spinbutton/datepicker-spinbuttons.html">Date Picker Spin Button Example:</a> Illustrates a date picker made from thre spin buttons for day, month, and year.</p>
       </section>
 
       <section class="notoc">
