Carousel and Spin Button: Fix links between patterns and example pages (pull #1091)
* Fix link to carousel example page from pattern.
* Fix  links to carousel design pattern from example page.
* Add link to date picker spin button example page in spin button pattern

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -507,7 +507,7 @@
       <section class="notoc">
         <h4>Example</h4>
         <p>
-          <a href="examples/carousel/carousel-1/carousel-1.html">Auto-Rotating Image Carousel Example:</a> A basic image carousel that demonstrates the accessibility features necessary for carousels that rotate automatically on page load.
+          <a href="examples/carousel/carousel-1.html">Auto-Rotating Image Carousel Example:</a> A basic image carousel that demonstrates the accessibility features necessary for carousels that rotate automatically on page load.
         </p>
       </section>
 
@@ -2419,10 +2419,7 @@
 
       <section class="notoc">
         <h4>Example</h4>
-        <p>
-          Work to develop a spinbutton example is tracked by
-          <a href="https://github.com/w3c/aria-practices/issues/125">issue 125.</a>
-        </p>
+        <p><a href="examples/spinbutton/datepicker-spinbuttons.html">Date Picker Spin Button Example:</a> Illustrates a date picker made from thre spin buttons for day, month, and year.</p>
       </section>
 
       <section class="notoc">
