updated date picker code to use the Date object like the datepicker dialog example

--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -634,18 +634,6 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row"><code>button</code></th>
-              <td></td>
-              <td><code>button</code></td>
-              <td>
-                <ul>
-                  <li>The <code>button</code> has the default role of <code>button</code>.</li>
-                  <li>Accessible name comes from <code>aria-labelledby</code> attribute.</li>
-                  <li>Button is removed from tab order of the page, since the dialog can be opened from the date input with the keyboard.</li>
-                </ul>
-              </td>
-            </tr>
             <tr data-test-id="calendar-button-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=<q>-1</q></code></th>
@@ -752,19 +740,6 @@
               </tr>
             </thead>
             <tbody>
-                <tr>
-                  <th scope="row"><code>button</code></th>
-                  <td></td>
-                  <td>
-                    <code>button</code>
-                  </td>
-                  <td>
-                    <ul>
-                      <li>The <code>button</code> element has the default role of <code>button</code>.</li>
-                      <li>The accessible name comes from the <code>aria-label</code> attribute.</li>
-                    </ul>
-                  </td>
-                </tr>
                 <tr data-test-id="date-picker-calendar-button-aria-label">
                     <td></td>
                     <th scope="row"><code>aria-label=<q><em>String</em></q></code></th>
@@ -781,7 +756,7 @@
                     </td>
                     <td>
                       <ul>
-                        <li>When the month and/or year changes the content of the <code>span</code> element is updated.</li>
+                        <li>When the month and/or year changes the content of the <code>h2</code> element is updated.</li>
                         <li>The use of the <code>polite</code> value means the screen reader will not interrupt other speech to announce the change in month and/or year.</li>
                       </ul>
                     </td>
