Fix data-test-id attribute

--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -347,7 +347,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="grid-shift=pageup">
+          <tr data-test-id="grid-shift-pageup">
             <th><kbd>Shift + Page Up</kbd></th>
             <td>
               <ul>
