started integration of dialog box regression tests

--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -89,6 +89,7 @@
         <div id="myDatepickerDialog"
              class="datepickerDialog"
              role="dialog"
+             aria-modal="true"
              aria-labelledby="id-dialog-label">
 
           <div class="header">
@@ -704,7 +705,7 @@
                       Defines the accessible name of the button (e.g. "Next Year").
                     </td>
                 </tr>
-                <tr data-test-id="change-date-button-aria-polite">
+                <tr data-test-id="change-date-aria-live">
                     <td></td>
                     <th scope="row"><code>aria-live=<q>polite</q></code></th>
                     <td>
