--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -32,7 +32,7 @@
     <p>
       <strong>NOTE:</strong> This example page is work in progress.
       Please provide feedback in
-      <a href="https://github.com/w3c/aria-practices/issues/34">issue 34.</a>
+      <a href="https://github.com/w3c/aria-practices/pull/1017">pull request 1017.</a>
     </p>
     <p>
       The date picker is an example of the <a href="../../#combobox"><code>combobox</code> design pattern</a> that opens a dialog box.
