--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -237,7 +237,7 @@
     <ul>
       <li>Opens and closes the date picker dialog box through click events.</li>
       <li>The accessible name of the button is updated when a date is selected to include the current date.</li>
-      <li>Removed from the tab order of the page (eg. <code>tabindex=-1</code>), since the user can use the <kbd>down arrow</kbd> key to open the date picker dialog box from the <code>textbox</code>.</li>
+      <li>Excluded from the <kbd>tab</kbd> sequence of the page (eg. <code>tabindex=-1</code>), since the user can use the <kbd>down arrow</kbd> key to open the date picker dialog box from the <code>textbox</code>.</li>
     </ul>
 
     <h3>Date Picker Dialog</h3>
