--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -840,7 +840,7 @@
   </section>
   </main>
   <nav>
-    <a href="../../#combobox"><code>combobox</code> design pattern</a>
+    <a href="../../#combobox"><code>combobox</code> Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
 </html>
