--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Example of Image Carousel with Automatically Rotating Images using Tablist | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Example of Image Carousel with Automatically Rotating Images using  a Tablist | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -37,7 +37,7 @@
       </ul>
     </nav>
     <main>
-      <h1>Example of Image Carousel with Automatically Rotating Images using Tablist</h1>
+      <h1>Example of Image Carousel with Automatically Rotating Images using a Tablist</h1>
         <p>
           Comments on this example are tracked in
           <a href="https://github.com/w3c/aria-practices/issues/955">issue 955.</a>
@@ -45,16 +45,16 @@
       <p>
         The following example implementation of the
         <a href="../../#carousel">carousel design pattern</a>
-        demonstrates features of the pattern that are essential to accessibility for carousels that automatically start rotating when the page loads.
-        For instance, rotation stops when users move focus to any control or link in the carousel or hover the mouse over carousel content.
+        demonstrates features of the pattern that are essential to accessibility for carousels that automatically start rotating when the page loads and allow users to directly select which slide is presented.  Slide selction is typically provided using a series of circular buttons rendered over the rotating slides.
+        Automatic rotation stops when users move focus to any control or link in the carousel or hover the mouse over carousel content.
         The accessibility features section that follows the example describes these features in detail.
       </p>
 
       <section>
         <h2>Example View Options</h2>
         <ul>
-          <li><a href="carousel-2-tablist.html">Carousel controls and captions displayed on image</a>: This option is less accessible than the other option because the controls are harder to perceive and captions are more difficult to read with rotating images behind them.</li>
-          <li><a href="carousel-2-tablist.html?moreaccessible">Carousel controls and captions displayed above and below the image</a>: This option is preferable because controls and captions are easier to perceive.</li>
+          <li><a href="carousel-2-tablist.html">Tablist carousel controls and captions displayed on image</a>: This option is less accessible than the other option because the controls are harder to perceive and captions are more difficult to read with rotating images behind them.</li>
+          <li><a href="carousel-2-tablist.html?moreaccessible">Tablist carousel controls and captions displayed above and below the image</a>: This option is preferable because controls and captions are easier to perceive.</li>
         </ul>
       </section>
 
@@ -269,7 +269,9 @@
                        aria-label="5 of 6">
 
                     <div class="carousel-image">
+                      <a href="#">
                         <img src="images/britcomdavidslide__800x600.jpg" alt="British flag with WILL-TV host David Thiel."/>
+                      </a>
                     </div>
 
                     <div class="carousel-caption">
@@ -342,7 +344,7 @@
           </li>
           <li>
             Moving keyboard focus to any of the carousel content, including the next and previous slide elements, pauses automatic rotation.
-            Automatic rotation resumes when keyboard focus moves out of the carousel content unless another condition, such as mouse hover,  that prevents rotation has been triggered.
+            Automatic rotation only resumes if the user explicitly activates the <q>Play</q> button.
           </li>
           <li>The carousel also contains a rotation control button that can stop and start automatic rotation.
             <ul>
@@ -367,7 +369,7 @@
           </li>
           <li>The transparency of the caption area is decreased so the caption text meets the WCAG 2.1 color contrast requirements.</li>
         </ul>
-        <h3>Focus Styling of the Tabs</h3>
+        <h3>Focus Styling of the Tablist and Tabs</h3>
         <p>
         When a tab receives focus the tablist is also highlighted with a border to provide an affordance to the user that the cursor keys should be bused to move focus between the tabs.
         </p>
