updated where to place comments

--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -40,7 +40,7 @@
       <h1>Example of Image Carousel with Automatically Rotating Images using a Tablist</h1>
         <p>
           Comments on this example are tracked in
-          <a href="https://github.com/w3c/aria-practices/issues/955">issue 955.</a>
+          <a href="https://github.com/w3c/aria-practices/pull/1120">Pull request 1120.</a>
         </p>
       <p>
         The following example implementation of the
